style: fix wavy line alignment in about section to be under the title

--- a/Downloads/perfectbooth/src/app/globals.css
+++ b/Downloads/perfectbooth/src/app/globals.css
@@ -315,7 +315,7 @@ a {
 .wavy-line {
   margin-bottom: 2rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .about-description {
